2007-08-06  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: Bumped version for 0.1.10 iteration

2007-08-06  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/banter.in: Removed mozilla initialization code
	* NEWS: Updated for the 0.1.9 release

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ProviderUserManager.cs: Added a ProviderUserRemoved event to
	  remove the user in the UI too
	* Banter/PersonManager.cs: Fixed removal code so a person get's removed
	  from the model
	* Banter/PersonView.cs: spacing
	* Banter/PersonSync.cs: Added handlers for a personRemoved event

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: Updated notification so you don't get a
	  notification for each message updated when a window firsts opens

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Fixed up data integrity problems between Person and
	  ProviderUser
	* Banter/PersonManager.cs: Called model updates on the gui thread and
	  protected the model
	* Banter/PersonView.cs: Removed code that messed with me in the model
	  since me shouldn't even be in there, it was handled at the model
	  layer

2007-08-03  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: fixes to remove
	* Banter/ProviderUserManager.cs: catching member change events
	* Banter/ProviderUser.cs: more authorization remove methods

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/MessagesView.cs: Added margin and new wrap style

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/MessagesView.cs: Updated to not munge the text on an insert if
	  things are selected

2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* ChangeLog, Banter/Application.cs: Applied patch from Johnny Jacob
	  <jjohnny@novell.com>
	* Banter/ChangeLog: Removed outdated changelog... all changes go in the
	  root changelog

2007-08-04  Johnny Jacob  <jjohnny@novell.com>

	* Application.cs : Open/Show GroupWindow on left click on trayicon
